<resources>
    <string name="app_name">Krwiodactwo</string>

    <!--LOGIN PAGEES -->
    <string name="wrong_login_data">Błędne dane logowania!</string>
    <string name="login">LOGOWANIE</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Hasło</string>
    <string name="password_forgot">W razie problemów z logowaniem prosimy o kontakt na andres dgrzelak@9bits.pl</string>
    <string name="login_button_text">Zaloguj się</string>

    <!--DESKTOP PAGE-->
    <string name="hello_text">Witaj</string>
    <string name="infomator">Informator</string>
    <string name="map">Mapa</string>
    <string name="profile">Mój profil</string>
    <string name="achivenents">Moje osiągnięcia</string>

    <!--FontAwesome-->
    <string name="font_awesome_icon_eye">&#xf06e;</string>
    <string name="font_awesome_left_arrow">&#xf104;</string>
    <string name="font_awesome_heart">&#xf21e;</string>
    <string name="font_awesome_profile">&#xf007;</string>
    <string name="font_awesome_map">&#xf279;</string>
    <string name="font_awesome_achivements">&#xf005;</string>

    <!--USER PAGE-->
    <string name="user_name">Imię: </string>
    <string name="user_surname">Nazwisko: </string>
    <string name="user_email">Email: </string>
    <string name="user_address">Adres: </string>

    <!--MY ACHIVEMENTS PAGE-->
    <string name="first_blood">Pierwsza krew</string>
    <string name="first_litr">Pierwszy litr!</string>
    <string name="helping_hand">Pomocna dłoń</string>
    <string name="honor_man">Honorowy dawca</string>
    <string name="first_blood_achive">Oddałeś krew poraz pierwszy po zarejestrowaniu w aplikacji!</string>
    <string name="first_blood_no_achive">Oddaj krew poraz pierwszy po zarejestrowaniu w aplikacji!</string>
    <string name="achive">Brawo, zdobyłeś to osiągnięcie!</string>
    <string name="no_achive">Oddałeś: %1$dml/%2$dml. Brakuje Ci jeszcze %3$dml.</string>

    <string name="font_awesome_first_blood">&#xf043;</string>
    <string name="font_awesome_first_litr">&#xf0fc;</string>
    <string name="font_awesome_helping_hand">&#xf25b;</string>
    <string name="font_awesome_honor_man">&#xf091;</string>


    <string name="google_maps_key">AIzaSyB6UI1kNBof_m2_Olj6a2N3045O9XqjIB8</string>

    <string name="show_hospital_and_blood_places">\nPokaż szpitale i \n punkty krwiodactwa\n</string>
</resources>
