<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_light_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/text_dark_color"
            android:textSize="@dimen/larger_text" />

        <EditText
            android:id="@+id/fragment_login_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_button_height"
            android:background="@drawable/rounded_retacle_light_gray_login_page"
            android:hint="@string/login_hint"
            android:inputType="text"
            android:maxLines="1"
            android:paddingBottom="@dimen/small_spacing"
            android:paddingLeft="@dimen/smaller_spacing"
            android:paddingTop="@dimen/small_spacing"
            android:textColor="@android:color/black"
            android:textColorHint="@color/brown_lighter"
            android:textSize="@dimen/small_text" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/fragment_login_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/large_button_height"
                android:layout_marginBottom="@dimen/super_small_spacing"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_retacle_light_gray_login_page"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="@dimen/smaller_spacing"
                android:textColor="@android:color/black"
                android:textColorHint="@color/brown_lighter"
                android:textSize="@dimen/small_text" />

            <TextView
                android:id="@+id/fragment_login_eye_icon"
                fontPath="fonts/fontawesome-webfont.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/fragment_login_password"
                android:layout_alignBottom="@+id/fragment_login_password"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/medium_spacing"
                android:layout_marginTop="@dimen/small_spacing"
                android:clickable="true"
                android:text="@string/font_awesome_icon_eye"
                android:textColor="@color/brown_lighter"
                android:textSize="@dimen/larger_text"
                tools:ignore="MissingPrefix,RtlHardcoded" />
        </RelativeLayout>


        <TextView
            android:id="@+id/fragment_login_password_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_spacing"
            android:gravity="end"
            android:text="@string/password_forgot"
            android:textAlignment="gravity"
            android:textColor="@color/brown_lighter"
            android:textSize="@dimen/smaller_text" />


        <Button
            android:id="@+id/fragment_login_button"
            style="@style/App.Button.Login.Green.5dp.noShadow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_button_height"
            android:layout_marginBottom="85dp"
            android:text="@string/login_button_text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>