<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light_color"
    android:orientation="vertical"
    android:overScrollMode="never"
    android:paddingLeft="@dimen/smaller_spacing"
    android:paddingRight="@dimen/smaller_spacing"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/indicators_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="30dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/fragment_my_profile_title"
                android:background="@drawable/separator_line"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/fragment_my_profile_title"
                style="@style/hello_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/fragment_my_profile_title"
                android:background="@drawable/separator_line"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/black"
                android:layout_marginBottom="40dp">
            <ImageView
                android:id="@+id/fragment_my_profile_user_photo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:padding="8dp"/>
            </FrameLayout>

            <TextView
                android:id="@+id/fragment_my_profile_name"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:gravity="center_horizontal"
                />
            <TextView
                android:id="@+id/fragment_my_profile_surname"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_surname"
                android:gravity="center_horizontal"

                />
            <TextView
                android:id="@+id/fragment_my_profile_email"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_email"
                android:gravity="center_horizontal"

                />
            <TextView
                android:id="@+id/fragment_my_profile_address"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_address"
                android:gravity="center_horizontal"
                />

            </LinearLayout>
        </LinearLayout>
</ScrollView>