<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light_color"
    android:orientation="vertical"
    android:overScrollMode="never"
    android:paddingLeft="@dimen/smaller_spacing"
    android:paddingRight="@dimen/smaller_spacing"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/indicators_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="30dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/fragment_my_profile_title"
                android:background="@drawable/separator_line"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/fragment_my_profile_title"
                style="@style/hello_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/achivenents" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/fragment_my_profile_title"
                android:background="@drawable/separator_line"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/my_achivements_first_blood_icon"
                    style="@style/pie_text_view"
                    fontPath="fonts/fontawesome-webfont.ttf"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/profile"
                    android:textSize="36dp"
                    tools:ignore="MissingPrefix,RtlHardcoded"
                    tools:layout_editor_absoluteX="374dp"
                    tools:layout_editor_absoluteY="40dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">
                <TextView
                    android:id="@+id/my_achivements_first_blood_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/first_blood"
                    android:textSize="24sp"/>
                    <TextView
                        android:id="@+id/my_achivements_first_blood_achive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/achive" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/my_achivements_first_litr_icon"
                    style="@style/pie_text_view"
                    fontPath="fonts/fontawesome-webfont.ttf"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:gravity="center_horizontal|center_vertical"                    android:text="@string/profile"
                    android:textSize="36dp"
                    tools:ignore="MissingPrefix,RtlHardcoded"
                    tools:layout_editor_absoluteX="374dp"
                    tools:layout_editor_absoluteY="40dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">
                <TextView
                    android:id="@+id/my_achivements_first_litr_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/first_litr"
                    android:textSize="24sp"/>

                    <TextView
                        android:id="@+id/my_achivements_first_litr_achive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/achive" />
                    </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/my_achivements_helping_hand_icon"
                    style="@style/pie_text_view"
                    fontPath="fonts/fontawesome-webfont.ttf"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="@string/profile"
                    tools:ignore="MissingPrefix,RtlHardcoded"
                    tools:layout_editor_absoluteX="374dp"
                    tools:layout_editor_absoluteY="40dp"
                    android:textSize="36dp"
                    android:gravity="center_horizontal|center_vertical"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">
                <TextView
                    android:id="@+id/my_achivements_helping_hand_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/helping_hand"
                    android:textSize="24sp"/>
                    <TextView
                        android:id="@+id/my_achivements_helping_hand_achive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/achive" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/my_achivements_honor_icon"
                    style="@style/pie_text_view"
                    fontPath="fonts/fontawesome-webfont.ttf"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:text="@string/profile"
                    tools:ignore="MissingPrefix,RtlHardcoded"
                    tools:layout_editor_absoluteX="374dp"
                    tools:layout_editor_absoluteY="40dp"
                    android:textSize="36dp"
                    android:gravity="center_horizontal|center_vertical"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">
                <TextView
                    android:id="@+id/my_achivements_honor_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/honor_man"
                    android:textSize="24sp"/>

                    <TextView
                        android:id="@+id/my_achivements_honor_achive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/achive" /></LinearLayout>
            </LinearLayout>

        </LinearLayout></ScrollView>
    </LinearLayout>
</ScrollView>